View Issue Details [ Jump to Notes ] | [ Issue History ] [ Print ] |
ID | Project | Category | View Status | Date Submitted | Last Update |
0029241 | Open CASCADE | [OCCT] OCCT:Data Exchange | public | 2017-10-18 17:42 | 2020-10-06 20:49 |
|
Reporter | ika | |
Assigned To | dpasukhi | |
Priority | normal | Severity | minor | |
Status | assigned | Resolution | open | |
Platform | | OS | | OS Version | |
Product Version | [OCCT] 7.2.0 | |
Target Version | [OCCT] 7.6.0* | Fixed in Version | | |
|
Summary | 0029241: Data Exchange - Empty shape after reading STEP file. |
Description | This issue is from DMU_Reviewer project.
The problem is in unknown for OCCT entities
MECHANICAL_DESIGN_AND_DRAUGHTING_RELATIONSHIP
According to schema, this entity is a subtype of Representation_Relationship entity, so during translation it should be processed like it. |
Steps To Reproduce | stepread nist_ctc_05_asme1_ap242-2.stp res * |
Tags | No tags attached. |
|
Test case number | |
|
Attached Files | nist_ctc_05_asme1_ap242-2.stp (511,580 bytes) 2017-10-18 17:42 |
|