0029241: Data Exchange - Empty shape after reading STEP file.

Entity mechanical_design_and_draughting_relationship and function for its transfer added.